--- a/Home.html
+++ b/Home.html
@@ -903,7 +903,7 @@ Championing climate action with our global carbon commitment                    
 						      
 						      twobyonewidget__box__image--overlay" style="background-image: url(&#39;./Images/documentacion.webp&#39;);filter:brightness(0.5)">
                             </div>
-                <div class="pt-2 pr-2 pb-6 pb-md-2 pt-md-4 px-md-7 twobyonewidget__box__text">
+                <div class="pt-2 pr-2 pb-6 pb-md-2 pt-md-4 px-md-7 twobyonewidget__box__text" style="padding-left:23px">
                     <h3>
                         Documentación
                      </h3>
@@ -1148,7 +1148,7 @@ Championing climate action with our global carbon commitment                    
                     </div>
 
 
-                <div class="pt-2 pr-2 pb-6 pb-md-2 pt-md-4 px-md-7">
+                <div class="pt-2 pr-2 pb-6 pb-md-2 pt-md-4 px-md-7" style="padding-left:23px">
                     <h3>
 
                         Seguimiento a embarques
