--- a/Home.html
+++ b/Home.html
@@ -547,7 +547,8 @@
 
                             <div class="pt-5 pr-2 pb-2 pl-3 pt-md-7 pr-md-6 pl-md-6">
                             <h4>
-                                EMPAQUE &amp; ALMACENA&lt;br&gt;MIENTO							</h4>
+                                EMPAQUE &amp; ALMACENA- <br/> MIENTO							
+                            </h4>
                             <p>
                                 Empaque, embarque y distribución de sus mercancías, contamos con comercializadoras con padrón de importadores.
                             </p>
