--- a/Home.html
+++ b/Home.html
@@ -1386,7 +1386,7 @@ Championing climate action with our global carbon commitment                    
 
     </div>
 </div>
-<section id="contact" class="shadow-host" style="background-color: #9eaec5;"></section>
+<section id="contact" class="shadow-host" style="background-color: #0d4088;"></section>
 <footer class="footer textcolour--white pt-4 pb-2">
     <div class="container">
         <div class="col-12 col-md-6 mb-4">
