contac color chgh 2

--- a/Home.html
+++ b/Home.html
@@ -1499,7 +1499,7 @@ Championing climate action with our global carbon commitment                    
             <div class="w-full lg:w-7/12 xl:w-8/12 px-4">
                 <div class="ud-contact-content-wrapper">
                     <div class="ud-contact-title mb-12 lg:mb-[150px]">
-                        <span class="mb-5 text-base font-semibold text-dark">
+                        <span class="mb-5 text-base font-semibold" style="color:white">
                             CONTACTANOS
                         </span>
                         <h2 class="text-[35px] font-semibold">
@@ -1515,8 +1515,8 @@ Championing climate action with our global carbon commitment                    
                             </svg>
                         </div>
                         <div>
-                            <h5 class="mb-6 text-lg font-semibold">¿Cómo podemos ayudarte?</h5>
-                            <p class="text-base text-body-color" style="color:black;">ventas@aamuris.com.mx</p>
+                            <h5 class="mb-6 text-lg font-semibold" style="color:white">¿Cómo podemos ayudarte?</h5>
+                            <p class="text-base text-body-color" style="color:white";">ventas@aamuris.com.mx</p>
                         </div>
                     </div>
                 </div>
