--- a/Home.html
+++ b/Home.html
@@ -1502,7 +1502,7 @@ Championing climate action with our global carbon commitment                    
                         <span class="mb-5 text-base font-semibold" style="color:white">
                             CONTACTANOS
                         </span>
-                        <h2 class="text-[35px] font-semibold">
+                        <h2 class="text-[35px] font-semibold" style="color:white">
                             Platiquemos <br>
                             Nos gustaría saber de ti.
                         </h2>
