location ubicacion for contatc

--- a/Home.html
+++ b/Home.html
@@ -1515,9 +1515,9 @@ Championing climate action with our global carbon commitment                    
                             </svg>
                         </div>
                         <div>
-                            <h5 class="mb-6 text-lg font-semibold">Ubicación</h5>
-                            <p class="text-base text-body-color">
-                            Matilde Márquez 68-A, Peñón de los Baños, Venustiano Carranza, 15520 Ciudad de México, CDMX
+                            <h5 class="mb-6 text-lg font-semibold" style="color:white">Ubicación</h5>
+                            <p class="text-base text-body-color" style="color:white">
+                                Lincoln #4343, Col. San Rafael, 88200, Nuevo Laredo, Tamaulipas, Mexico
                             </p>
                         </div>
                     </div>
