--- a/Aduanas.html
+++ b/Aduanas.html
@@ -282,7 +282,7 @@ function closeMenu() {
         
             .landingbanner__background, .landingbanner__image--mobile {
                 aspect-ratio: 1.5;
-                background-size: 100% 100%; /* Cover the area of the container */
+                /* background-size: 100% 100%; Cover the area of the container */
                 background-position: center; /* Center the image */
                 background-repeat: no-repeat; /* Do not repeat the image */
                 position: relative; /* Position it absolutely to overlay */
