--- a/Ventajas.html
+++ b/Ventajas.html
@@ -395,7 +395,7 @@
         /* Desktop and Larger Screens Styles */
         @media (min-width: 768px) {
             .landingbanner__background {
-                min-height: 100vh; /* Adjust to desired height */
+                min-height: auto; /* Adjust to desired height */
                 
             }
     
