--- a/Ventajas.html
+++ b/Ventajas.html
@@ -383,7 +383,7 @@
         /* Mobile Styles */
         @media (max-width: 768px) {
             .landingbanner__background, .landingbanner__image--mobile {
-                height: 100vh; /* Full viewport height */
+                height: auto; /* Full viewport height */
                 background-size: 100% 100%;
             }
     
@@ -406,7 +406,7 @@
         @media (min-width: 769px) and (max-width: 959px) {
         .landingbanner__background, .landingbanner__image--mobile {
             background-size: contain; /* Change to cover to maintain aspect ratio */
-            height: 100vh; /* Ensures the image takes the full height of the viewport */
+            height: auto; /* Ensures the image takes the full height of the viewport */
             position: relative; /* Ensures the position is relative as per your requirements */
         }
         
