--- a/Ventajas.html
+++ b/Ventajas.html
@@ -383,7 +383,7 @@
         /* Mobile Styles */
         @media (max-width: 768px) {
             .landingbanner__background, .landingbanner__image--mobile {
-                height: auto; /* Full viewport height */
+                height: 200vw; /* Full viewport height */
                 background-size: 100% 100%;
             }
     
