--- a/Home.html
+++ b/Home.html
@@ -55,11 +55,11 @@
             </section>
             <ul class="topnav__list">
                 
-                <li class="topnav__item ml-3 ml-md-5">
+                <!-- <li class="topnav__item ml-3 ml-md-5">
                     <a href="#contact" class="topnav__link">
                         Contacto
                     </a>
-                </li>
+                </li> -->
                 <li class="topnav__item ml-3 ml-md-5">
                     <a href="javascript:;" class="topnav__link topnav__menuButton">
                         <span>Menu</span>
@@ -161,11 +161,11 @@
 				</a>
 			
 			</li>
-			<!-- <li class="mainnav__item">
-				<a href="#contact" class="mainnav__link">
+			<li class="mainnav__item">
+				<a href="Contacto.html" class="mainnav__link">
 					Contacto
 				</a>
-			</li> -->
+			</li>
 	</ul>
 </div> 
 	<div class="header__line mx-3 mx-md-4"></div>
