--- a/Nosotros.html
+++ b/Nosotros.html
@@ -294,7 +294,8 @@
         <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" 
             style="background-image: url('./Images/mscship.webp');background-color:#0d3761;;filter: brightness(50%);">
         </div>
-        <div class="landingbanner__content px-lg-0 px-2 px-md-4">
+        <div class="landingbanner__content px-lg-0 px-2 px-md-4" style="
+    transform: translate(-70%,-150%);">
             <h1>Nosotros</h1>
         </div>
         
@@ -471,7 +472,7 @@
                         </div>                 
                     </div>
                     <hr class="mb-3">
-                    <a class="twowidget__column__cta mb-3" href="Contacto.html">
+                    <a class="twowidget__column__cta mb-3" href="#contact">
                         Contacto
                         <svg>
                             <use xlink:href="#arrow"></use>
