--- a/Precensia.html
+++ b/Precensia.html
@@ -317,7 +317,8 @@
         <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" 
             style="background-image: url('./Images/world_sharpened2.png');background-color:#0d3761;;filter: brightness(50%);">
         </div>
-        <div class="landingbanner__content px-lg-0 px-2 px-md-4">
+        <div class="landingbanner__content px-lg-0 px-2 px-md-4" style="
+        transform: translate(-70%,-150%);">
             <h1>Precensia</h1>
         </div>
         
