--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -319,7 +319,8 @@
         <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" 
             style="background-image: url('./Images/onlienreport.webp');background-color:#0d3761;;filter: brightness(50%);">
         </div>
-        <div class="landingbanner__content px-lg-0 px-2 px-md-4">
+        <div class="landingbanner__content px-lg-0 px-2 px-md-4" style="
+        transform: translate(-70%,-150%);">
             <h1>Reportes En Linea</h1>
         </div>
         
