banner changes contaco & reportes

--- a/Contacto.html
+++ b/Contacto.html
@@ -320,7 +320,7 @@
             <div class="landingbanner__image landingbanner__image--mobile d-block d-md-none" 
                 style="background-image: url('./Images/contactototo.webp');background-color:#0d3761;;filter: brightness(50%);">
             </div>
-            <div class="landingbanner__content px-lg-0 px-2 px-md-4">
+            <div class="landingbanner__content px-lg-0 px-2 px-md-4" style="transform: translate(-50%, -150%);">
                 <h1>Contacto</h1>
             </div>
             
