video shows on mobile on home

--- a/Home.html
+++ b/Home.html
@@ -234,17 +234,17 @@
         }
     }
 
-    @media (max-width: 959px) { /* Typically the breakpoint for tablets and below */
+    /* @media (max-width: 959px) { 
         .video-container {
-            display: none; /* Hide video on mobile */
+            display: none; 
         }
         .banner__image {
-            display: block; /* Show the image on mobile */
+            display: block; 
         }
         .banner__content{
             display:block;
         }
-    }
+    } */
     @media(min-width:960px){
         .banner__item {
             aspect-ratio:0;
@@ -318,12 +318,12 @@
                         src="https://firebasestorage.googleapis.com/v0/b/mscwebsite-c49af.appspot.com/o/videomsc2022.mp4?alt=media&token=66a56a46-666b-4e33-9dfc-08a07560b260">
 				        </video>
                         </div>
-                        <div class="banner__image d-md-none d-block">
+                        <!-- <div class="banner__image d-md-none d-block">
                             <picture>
                                 <img alt="Welcome to Grosvenor"
                                     src="./Home_copy2_files/homepage-website-mobile-banner.jpg">
                             </picture>
-                        </div>
+                        </div> -->
 						<div class="banner__content px-lg-0 px-4">
 							<div class="container">
 								<div class="row">
