--- a/Ventajas.html
+++ b/Ventajas.html
@@ -1010,14 +1010,16 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
             <div class="col-12 mb-md-7 mb-5 col-md-4">
                 <div class="contentlisting__card">
                     <div class="contentlisting__card__title">
-                        <h6>SERVICIO DE CLASIFICACIÓN DE MERCANCÍAS</h6>
+                        <h6>SERVICIO DE CLASIFICACIÓN DE PRODUCTOS</h6>
                     </div>
+                    <!-- <div class="contentlisting__card__title">
+                        <h6>SERVICIO DE CLASIFICACIÓN DE MERCANCÍAS</h6>
+                    </div> -->
                     <div class="contentlisting__card__content">
                         <p>Nuestro personal capacitado realiza una inspección y clasificación correcta de su mercancía.</p>
                     </div>
                     <div class="contentlisting__card__content">
-                        <p>RELACIONES CON
-                            DEPENDENCIAS DE GOBIERNO: Las relaciones con las dependencias de gobierno nos permiten realizar sus trámites en tiempo y sin errores.</p>
+                        <p>RELACIONES GUBERNAMENTALES: Las relaciones con las dependencias de gobierno nos permiten realizar sus trámites en tiempo y sin errores.</p>
                     </div>
                     <div class="contentlisting__card__content">
                         <p>ACCESO A
