--- a/Home.html
+++ b/Home.html
@@ -251,7 +251,7 @@
         width: 100%; /* Container takes the full width of its parent */
         /* padding-top: 56.25%; Maintains a 16:9 aspect ratio */
         /*overflow: hidden;  Clips out anything outside this container */
-        height: 895px;
+        height: 1080px;
       }
     
       .video-container video {
@@ -260,7 +260,7 @@
         top: 50%;
         left: 50%;
         width: 100%; /* Sets the width relative to the width of the viewport */
-        height: 1080px; /* Height is set based on the aspect ratio to maintain 16:9 */
+        height: 120%; /* Height is set based on the aspect ratio to maintain 16:9 */
         min-height: 100vh; /* Minimum height to cover the viewport height */
         min-width: 177.77vh; /* Minimum width to cover the viewport width if height is 100vh */
         transform: translate(-50%, -50%); /* Centers the video */
