--- a/Nosotros.html
+++ b/Nosotros.html
@@ -925,7 +925,7 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
     <div class="container px-4">
         <div class="-mx-4 flex flex-wrap">
             <!-- Contact Title and Description -->
-            <div class="w-full lg:w-7/12 xl:w-8/12 px-4">
+            <div class="w-full lg:w-7/12 xl:w-8/12 px-4" style="padding:2rem; background-color:#1dacf3; border-radius:10%;">
                 <div class="ud-contact-content-wrapper">
                     <div class="ud-contact-title mb-12 lg:mb-[150px]">
                         <span class="mb-5 text-base font-semibold" style="color:white">
