text changes & removed precensia links

--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -168,13 +168,13 @@
                             
                     </ul>
                         </li>
-                        <li class="mainnav__item">
+                        <!-- <li class="mainnav__item">
                             <a href="Precensia.html" class="mainnav__link">
                                 Precensia
                                                 <div class="icon mainnav__linkIcon"></div>
                             </a>
                         
-                        </li>
+                        </li> -->
                         <li class="mainnav__item">
                             <a href="Ventajas.html" class="mainnav__link">
                                 Ventajas
