--- a/Home.html
+++ b/Home.html
@@ -142,13 +142,13 @@
                 
         </ul>
 			</li>
-			<li class="mainnav__item">
-				<a href="Precensia.html" class="mainnav__link">
-					Precensia
-									<div class="icon mainnav__linkIcon"></div>
-				</a>
-			
-			</li>
+			<!-- <li class="mainnav__item">
+                <a href="Precensia.html" class="mainnav__link">
+                    Precensia
+                                    <div class="icon mainnav__linkIcon"></div>
+                </a>
+            
+            </li> -->
 			<li class="mainnav__item">
 				<a href="Ventajas.html" class="mainnav__link">
 					Ventajas
