--- a/Test.html
+++ b/Test.html
@@ -11,7 +11,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const url = `https://309f-34-94-131-252.ngrok-free.app/news`;  // Pointing to your VM
+            const url = `https://2238-34-94-131-252.ngrok-free.app/news`;  // Pointing to your VM
     
             async function fetchNews() {
                 try {
