--- a/Test.html
+++ b/Test.html
@@ -11,7 +11,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const url = `https://tall-results-double.loca.lt/news`;  // Pointing to your VM
+            const url = `http://34.94.131.252:8080/news`;  // Pointing to your VM
     
             async function fetchNews() {
                 try {
