--- a/Home.html
+++ b/Home.html
@@ -1342,7 +1342,7 @@ updateExchangeRates();
                             
                             <!-- <button class="tab-button" onclick="openTab(event, 'vision')">Filosofia</button> -->
                             <button class="tab-button active" onclick="openTab(event, 'general')">Información General</button>
-                            <!-- <button class="tab-button" onclick="openTab(event, 'customs')">Aduanas</button> -->
+                            <button class="tab-button" onclick="openTab(event, 'customs')">Aduanas</button>
                         </div>
                         
                         <div id="general" class="tab-content active" >
