--- a/Home.html
+++ b/Home.html
@@ -734,7 +734,7 @@ Championing climate action with our global carbon commitment                    
                     
                         <div class="stat-item">
                             
-                            <div class="number" data-target="8000">0</div>
+                            <div class="number" data-target="+18000">0</div>
                             <p class="label">Más de 8,000 pedimentos desaduanados</p>
                             <div class="underline"></div>
                         </div>
