all tiny & word changes

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -403,15 +403,15 @@
                     <div class="col-12"> <!-- This ensures full width on all devices -->
                         <div class="OutlineElement Ltr BCX8 SCXW260282758">
                             <h4 class="Paragraph SCXW260282758 BCX8">
-                                <!-- <span class="TextRun SCXW260282758 BCX8" data-contrast="none" lang="ES">
-                                    Muris Salinas Consultores es una distinguida agencia aduanal qué se especializa en ofrecer asesoría y soluciones integrales en aduanas y comercio internacional.
-                                </span> -->
                                 <span class="TextRun SCXW260282758 BCX8" data-contrast="none" lang="ES">
-                                    Muris Salinas Consultores es un socio fundamental que les facilita el proceso de importación, exportación et cumplimento aduanero.
+                                    Muris Salinas Consultores es una distinguida agencia aduanal qué se especializa en ofrecer asesoría y soluciones integrales en aduanas y comercio internacional.
                                 </span>
+                                <!-- <span class="TextRun SCXW260282758 BCX8" data-contrast="none" lang="ES">
+                                    Muris Salinas Consultores es un socio fundamental que les facilita el proceso de importación, exportación et cumplimento aduanero.
+                                </span> -->
                             </h4>
                             <p class="Paragraph SCXW260282758 BCX8">
-                                Con un profundo conocimiento del complejo entorno regulatorio y un compromiso con la excelencia, Muris Salinas Consultores actúa como un socio fundamental para las empresas que navegan por las complejidades de la importación, la exportación y el cumplimiento aduanero. Aprovechando un equipo de profesionales experimentados y tecnología de vanguardia, garantizan que las operaciones de los clientes sean eficientes y cumplan con todos los requisitos legales. Su experiencia no solo cubre el corretaje aduanero sino que también se extiende a la consultoría estratégica para optimizar las operaciones comerciales y reducir costos, lo que los convierte en un asesor confiable en la comunidad comercial internacional.
+                                Con un profundo conocimiento del complejo entorno regulatorio y un compromiso con la excelencia, es un socio fundamental que les facilita el proceso de importación, exportación y cumplimento aduanero. Aprovechando un equipo de profesionales experimentados y tecnología de vanguardia, garantizan que las operaciones de los clientes sean eficientes y cumplan con todos los requisitos legales. Su experiencia no solo cubre el corretaje aduanero sino que también se extiende a la consultoría estratégica para optimizar las operaciones comerciales y reducir costos, lo que los convierte en un asesor confiable en la comunidad comercial internacional.
                             </p>
                         </div>
                     </div>
@@ -641,7 +641,7 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
                     <h3>Operaciones Aéreas</h3>
                     <div class="parallaximagewithcontent__content__inner">
                         <p>
-                            Como parte de nuestros servicios amplios, tenemos presencia en al Aeropuerto Internacional de México realizando operaciones de exportación y importación.
+                            Como parte de nuestros servicios amplios, tenemos presencia en al Aeropuerto Internacional de México realizando operaciones de exportación y importación. Parecencia en al Aeropuerto Internacional de la Ciudad de México (AICM) para facilitar tramites y despachos.
                         </p>
                         <hr class="mb-3">
 				
