--- a/Ventajas.html
+++ b/Ventajas.html
@@ -875,7 +875,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
 						<div class="contentlisting__card" >
 
 
-								<div class="contentlisting__card__image mb-3" style="background-image:url(&#39;./Images/inspection.png&#39;)">
+								<div class="contentlisting__card__image mb-3" style="background-image:url(&#39;./Images/inspection.webp&#39;)">
 								</div>
 
 
