inspect elem disabled

--- a/Aduanas.html
+++ b/Aduanas.html
@@ -868,7 +868,7 @@
       "themeColor": "#2563eb"
   });
 </script> 
-<!-- <script>
+<script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
     });
@@ -889,6 +889,6 @@
         return false;
       }
     };    
-</script>  -->
+</script> 
 </body>
 </html>
