--- a/Home.html
+++ b/Home.html
@@ -1970,7 +1970,7 @@ updateExchangeRates();
       "themeColor": "#2563eb"
   });
 </script>  
-<!-- <script>
+<script>
 document.addEventListener('contextmenu', function(e) {
   e.preventDefault();
 });
@@ -1991,6 +1991,6 @@ document.onkeydown = function(e) {
     return false;
   }
 };
-</script> -->
+</script>
 </body>
 </html>
