--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1078,7 +1078,7 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
       "themeColor": "#2563eb"
   });
 </script>  
-<!-- <script>
+<script>
 	document.addEventListener('contextmenu', function(e) {
 	  e.preventDefault();
 	});
@@ -1100,6 +1100,6 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
 	  }
 	};
 
-	</script> -->
+	</script>
 </body>
 </html>
