--- a/Ventajas.html
+++ b/Ventajas.html
@@ -1397,7 +1397,7 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
       "themeColor": "#2563eb"
   });
 </script>  
-<!-- <script>
+<script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
     });
@@ -1418,6 +1418,6 @@ Siguiendo esta filosofía de vida MSC ha superado grandes retos y llegado a mant
         return false;
       }
     };
-    </script> -->
+    </script>
 </body>
 </html>
