--- a/Nosotros.html
+++ b/Nosotros.html
@@ -311,7 +311,7 @@
             @media (max-width: 768px) {
                 .landingbanner__background, .landingbanner__image--mobile {
                     background-size: cover; /* Keep aspect ratio but cover the area */
-                    background-position: 15% 50%; /* Change to focus on a specific part of the image */
+                    background-position: 25% 25%; /* Change to focus on a specific part of the image */
                     height: 100vh; /* Full viewport height */
                 }
         
@@ -362,7 +362,7 @@
             style="background-image: url('./Images/mscship.webp');background-color:#0d3761;;filter: brightness(50%);">
         </div>
         <div class="landingbanner__content px-lg-0 px-2 px-md-4" style="
-    transform: translate(-65%,-145%);">
+    transform: translate(-65%,-165%);">
             <h1>Nosotros</h1>
         </div>
         
@@ -1078,7 +1078,7 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
       "themeColor": "#2563eb"
   });
 </script>  
-<script>
+<!-- <script>
 	document.addEventListener('contextmenu', function(e) {
 	  e.preventDefault();
 	});
@@ -1100,6 +1100,6 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
 	  }
 	};
 
-	</script>
+	</script> -->
 </body>
 </html>
