--- a/Nosotros.html
+++ b/Nosotros.html
@@ -124,7 +124,18 @@
 		</div>
 	</nav>
 
-	
+	<!-- <style>
+        @media(max-width:400px){
+            .mobile_alignment{
+                transform: translate(-14%, 5%);
+            }
+        }
+        @media((min-width:400.9px) and (max-width:959.99px)){
+            .mobile_alignment{
+                transform: translate(-4%, 5%);
+            }
+        }
+    </style> -->
 
 	<div class="mainnav px-3 px-md-4 pb-6 pb-md-4">
 		<div class="mainnav__header">
@@ -147,7 +158,7 @@
 			<div class="icon mainnav__chevronDown"></div>
 		</a> -->
 		<!--STUFF LISTED UNDER MENU-->
-		<ul class="mainnav__list mx-4 mx-md-0 pb-7">
+		<ul class="mainnav__list mx-4 mx-md-0 pb-7" style="margin-top:10px !important; margin-left:0 !important">
 			<li class="mainnav__item">
 				<a href="Home.html" class="mainnav__link">
 					Inicio
