--- a/Home.html
+++ b/Home.html
@@ -1765,11 +1765,52 @@ Championing climate action with our global carbon commitment                    
     
     const styleEl = document.createElement('style');
     styleEl.textContent = `
-        :host, :host * {  
-            font-size: 16px; // Smaller font size for better readability on mobile
-            line-height: 1.5; // Improved line-height for text
-            color: white; // Universal text color for contrast
-        }
+    /* Styles for extra small devices (phones, less than 600px) */
+:host, :host * {
+    font-size: 14px;  /* Smaller font size for small devices */
+    line-height: 22px;
+}
+
+/* Styles for small devices (phones, 600px and up) */
+@media (min-width: 600px) {
+    :host, :host * {
+        font-size: 16px;
+        line-height: 26px;
+    }
+}
+
+/* Styles for medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    :host, :host * {
+        font-size: 18px;
+        line-height: 30px;
+    }
+}
+
+/* Styles for large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    :host, :host * {
+        font-size: 20px;
+        line-height: 35px;
+    }
+}
+
+/* Styles for extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    :host, :host * {
+        font-size: 22px; /* Larger font size for large screens */
+        line-height: 38px;
+    }
+}
+
+/* Styles for very large devices (extra large desktops, 1600px and up) */
+@media (min-width: 1600px) {
+    :host, :host * {
+        font-size: 24px; /* Even larger font size for very large screens */
+        line-height: 40px;
+    }
+}
+
         
         :host h2, :host h5 {
             margin-bottom: 10px; // Reduced margin for headers on mobile
@@ -1804,8 +1845,8 @@ Championing climate action with our global carbon commitment                    
         <div class="-mx-4 flex flex-wrap" style=" width: 95%; margin: 0 auto;">
             <!-- Contact Title and Description -->
             <div class="w-full lg:w-7/12 xl:w-8/12 px-4" style="padding:2rem; background-color:#2259ad; border-radius:10%; border-color:#3985e3; border-width:25px;">
-                <div class="ud-contact-content-wrapper" style="padding: 20px;">
-                    <div class="ud-contact-title mb-12 lg:mb-[150px]">
+                <div class="ud-contact-content-wrapper" style="padding: 20px;margin:0 auto;">
+                    <div class="ud-contact-title mb-12 ">
                         <span class="mb-5 text-base font-semibold" style="color:white">
                             CONTACTANOS
                         </span>
