--- a/Home.html
+++ b/Home.html
@@ -1105,7 +1105,7 @@ Championing climate action with our global carbon commitment                    
     #currencyChart {
         width: 100%;
         height: auto; /* Adjusted to auto for automatic height based on width */
-        aspect-ratio: 16 / 9; /* Aspect ratio for widescreen */
+        
         border-radius: 20px;
         background-color: #123456; /* Match the container background */
         box-shadow: inset 0 0 10px #000000; /* Inner shadow for depth */
@@ -1151,7 +1151,7 @@ Championing climate action with our global carbon commitment                    
             },
             options: {
                 responsive: true,
-                maintainAspectRatio: true,
+                maintainAspectRatio: false,
                 elements: {
                     line: {
                         tension: 0.4,
