--- a/Home.html
+++ b/Home.html
@@ -153,7 +153,7 @@
 		<div class="icon mainnav__chevronDown"></div>
 	</a> -->
     <!--STUFF LISTED UNDER MENU-->
-	<ul class="mainnav__list mx-4 mx-md-0 pb-7">
+	<ul class="mainnav__list mx-4 mx-md-0 pb-7" style="margin-top:10px !important; margin-left:0 !important">
         <li class="mainnav__item">
             <a href="Home.html" class="mainnav__link">
                 Inicio
