--- a/Home.html
+++ b/Home.html
@@ -1244,7 +1244,7 @@ Championing climate action with our global carbon commitment                    
     
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=' + encodeURIComponent('https://news.google.com/rss/search?q=mexican+business+regulations&hl=en-US&gl=US&ceid=US:en');
+        const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fnews.google.com%2Frss%2Fsearch%3Fq%3Dmexican%2Bbusiness%2Bregulations%26hl%3Den-US%26gl%3DUS%26ceid%3DUS%3Aen&api_key=jsevehtyqhyjaeaskwjldsw2yttdjhvtg5rl4sjq';
         
         fetch(rssUrl)
             .then(response => response.json())
