fxed the bug with the exchange rate box

--- a/Home.html
+++ b/Home.html
@@ -1041,16 +1041,16 @@ Championing climate action with our global carbon commitment                    
         #latest-rate-button {
             margin-top: 1rem;
             padding: 0.5rem 1rem;
-            background-color: rgba(43, 255, 0, 0.664); /* Transparent red */
+            background-color: rgba(0, 26, 255, 0.342); /* Transparent red */
             border: none;
             border-radius: 5px;
             color: #ffffff;
-            font-size: 10px;
+            font-size: 12px;
             cursor: pointer;
         }
 
         #latest-rate-button:hover {
-            background-color: rgba(0, 255, 21, 0.8); /* Darker red on hover */
+            background-color: rgba(25, 0, 117, 0.603); /* Darker red on hover */
         }
 
 
@@ -1353,10 +1353,10 @@ Championing climate action with our global carbon commitment                    
                             <!-- <button class="tab-button" onclick="openTab(event, 'news-container')">Noticias</button> -->
                         </div>
                         
-                        <div id="general" class="tab-content active" >
-                            <div id="curr">
-                                <button id="latest-rate-button" class="transparent-red-button">Latest Exchange Rate</button>
-                                <canvas id="currencyChart"></canvas>
+                        <div id="general" class="tab-content active">
+                            <div id="currency-chart-container">
+                                <center><button id="latest-rate-button" class="transparent-red-button">Latest Exchange Rate</button></center>
+                                <center><canvas id="currencyChart"></canvas></center>
                             </div>
                             
                             <!-- <div class="tab-background-image">
