--- a/Nosotros.html
+++ b/Nosotros.html
@@ -159,11 +159,6 @@
 					</a>
 				
 				</li> -->
-				<li class="mainnav__item">
-					<a href="Ventajas.html" class="mainnav__link">
-						Ventajas
-					</a>
-				</li>
 				
 				<li class="mainnav__item">
 					<a href="Aduanas.html" class="mainnav__link">
@@ -517,6 +512,18 @@
                     </h4>
                     <p class="Paragraph SCXW260282758 BCX8">
                         Con un profundo conocimiento del complejo entorno regulatorio y un compromiso con la excelencia, es un socio fundamental que les facilita el proceso de importación, exportación y cumplimento aduanero. Aprovechando un equipo de profesionales experimentados y tecnología de vanguardia, garantizan que las operaciones de los clientes sean eficientes y cumplan con todos los requisitos legales. Su experiencia no solo cubre el corretaje aduanero sino que también se extiende a la consultoría estratégica para optimizar las operaciones comerciales y reducir costos, lo que los convierte en un asesor confiable en la comunidad comercial internacional.
+                    </p>
+                    <h4 class="Paragraph SCXW260282758 BCX8">
+                        <span class="TextRun SCXW260282758 BCX8" data-contrast="none" lang="ES">
+                            Filosofía y Liderazgo
+                        </span>
+                    </h4>
+                    <p class="Paragraph SCXW260282758 BCX8">
+                        En Muris Salinas Consultores, S.C. nos preparamos para enfrentar estos retos mediante la mística del elemento humano, la filosofía innovadora y la tecnología.
+                        Damos un servicio de calidad en todo el flujo de nuestro proceso.
+                    </p>
+                    <p class="Paragraph SCXW260282758 BCX8"> 
+                        "Nos dedicamos a brindar servicio para el despacho aduanero que beneficia y de seguridad a nuestros socios comerciales, teniendo como base la innovación de procesos."
                     </p>
                 </div>
             </div>
