--- a/Home.html
+++ b/Home.html
@@ -1318,9 +1318,12 @@ Championing climate action with our global carbon commitment                    
     <div class="site-container">
         <div class="twobyonewidget__wrap">
 
-            <a class="twobyonewidget__box twobyonewidget__box--pullRight textcolour--white" style="background-color:#010a18">
-
-                <div class="contentlisting pb-3 pt-3 pb-md-5 pt-md-5 textcolour--white" style="background-color:#010a18">
+            <a class="twobyonewidget__box twobyonewidget__box--pullRight textcolour--white" style="background-color:#ffffff00">
+                <div class="twobyonewidget__box__image twobyonewidget__box__image--centeralign
+						  
+                twobyonewidget__box__image--overlay" style="background-image: url(&#39;./Images/softworldbakcground.webp&#39;);">
+             </div>
+                <div class="contentlisting pb-3 pt-3 pb-md-5 pt-md-5 textcolour--white" style="background-color:#ffffff00">
                     <div class="container">
                         <div class="row">
                             <!-- First three cards side by side -->
