--- a/Nosotros.html
+++ b/Nosotros.html
@@ -974,13 +974,13 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
                             
                         <div style="display: flex; align-items: center; ">
                             <a href="https://www.facebook.com/aamuris/" style="margin-right: 10px;">
-                                <img src="./Images/faceboom.png" alt="Facebook" style="width: 70px; height: 70px;">
+                                <img src="./Images/faceboom1.png" alt="Facebook" style="width: 70px; height: 70px;">
                             </a>
                             <a href="https://twitter.com/MurisSalinasSC" style="margin-right: 10px;">
-                                <img src="./Images/twitterboom.png" alt="Twitter" style="width: 70px; height: 70px;">
+                                <img src="./Images/twitterboom1.png" alt="Twitter" style="width: 70px; height: 70px;">
                             </a>
                             <a href="https://www.youtube.com/@MurisSalinasConsultores">
-                                <img src="./Images/ytboom.png" alt="YouTube" style="width: 70px; height: 70px;">
+                                <img src="./Images/ytboom1.png" alt="YouTube" style="width: 70px; height: 70px;">
                             </a>
                         </div>
                         
